Can add photo to new journal entry but photo's size need to be changed

--- a/TripLog/Info.plist
+++ b/TripLog/Info.plist
@@ -44,6 +44,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Necessary in adding photos into journal entries</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Necessary in adding photos into journal entries</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
