Added a basic map with current lcoation

--- a/TripLog/Info.plist
+++ b/TripLog/Info.plist
@@ -57,5 +57,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Need to show your current location on the map</string>
 </dict>
 </plist>
